@@ -11,6 +11,7 @@
 * core: #2312 fixed: properly remove all contacts and chats when removing account (Vogel)
 * gui: #1785 fixed: invalid parsing of some URLs (Vogel)
 * gui: #1838 fixed: use system highlight color in emoticons selector (Vogel)
+* notify: #2355 done: implement fullscreen apps detection option for Windows (mziab, beevvy)
 
 +++ version 0.12.0-alpha4
 * sql_history: #2484 done: removed uuids from history file, now history can be moved between instances (Vogel)
